# compass

./: CMakeLists.txt  README.md  compile_commands.json  org.kde.compass.desktop
src/: CMakeLists.txt  Main.qml  Main2.qml  main.cpp
